# AskDocs

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  spaces_README.md
.github/workflows/: ci.yml  eval.yml
data/processed/: golden_dataset.json
scripts/: ask.py  debug_sitemap.py  ingest.py
src/: api.py  config.py  models.py
src/data/qdrant_db/: meta.json
src/evaluation/: evaluator.py
src/generation/: generator.py
src/ingestion/: chunker.py  embedder.py  loader.py  vector_store.py
src/retrieval/: bm25_retriever.py  hybrid_retriever.py  query_expansion.py
tests/: test_pipeline.py
