[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "askdocs"
version = "0.1.0"
description = "Domain-specific RAG system with hybrid retrieval, reranking, and CI eval pipeline"
requires-python = ">=3.10"

dependencies = [
    # Core
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "tqdm>=4.66",

    # Document loading & chunking
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pypdf>=4.0",
    "lxml>=5.0",

    # Embeddings (local, free)
    "sentence-transformers>=3.0",
    "torch>=2.0",

    # Vector store
    "qdrant-client>=1.9",

    # BM25
    "rank-bm25>=0.2",

    # Reranking
    "transformers>=4.40",

    # LLM (Groq - free tier)
    "groq>=0.9",
    "langchain-groq>=0.2",
    "langchain-huggingface>=0.1",

    # Evaluation
    "ragas>=0.1.9",
    "deepeval>=0.21",
    "datasets>=2.19",

    # API / serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
